blog/infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
# spec describes deployment config: # of pods in set, client id to manage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  # template describes how pods set should be created by deployment
  template:
    metadata:
      # applies identifier to pods set 
      labels:
        app: client
    # spec describes containers to create within each pod
    spec:
      containers:
        - name: client
          image: rnz269/client
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: ClusterIP
  # which set of pods to expose (app: client)
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
